--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Privacy-first implementation engine that transforms newsletter insights into measurable business outcomes with neurodiversity optimization",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md}",
+    "format:check": "prettier --check src/**/*.{js,jsx,ts,tsx,css,md}",
+    "test:jest": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "security-check": "npm audit && snyk test",
@@ -29,27 +33,104 @@
   "author": "Ask Polestar",
   "license": "MIT",
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.0",
-    "crypto-js": "^4.2.0",
-    "web3": "^4.2.0",
     "@google-cloud/run": "^1.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
+    "@popperjs/core": "^2.11.8",
+    "@react-spring/web": "^9.7.3",
+    "@tensorflow/tfjs": "^4.10.0",
+    "@use-gesture/react": "^10.3.0",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "clsx": "^2.0.0",
+    "comlink": "^4.4.1",
+    "compromise": "^14.10.0",
+    "crypto-js": "^4.2.0",
+    "d3": "^7.8.5",
+    "date-fns": "^2.30.0",
     "differential-privacy": "^1.0.0",
-    "kyber-crystals": "^1.0.0"
+    "framer-motion": "^10.16.4",
+    "fuse.js": "^7.0.0",
+    "howler": "^2.2.4",
+    "idb": "^7.1.1",
+    "jsencrypt": "^3.3.2",
+    "kyber-crystals": "^1.0.0",
+    "lodash": "^4.17.21",
+    "lottie-react": "^2.4.0",
+    "ml-matrix": "^6.10.7",
+    "natural": "^6.7.0",
+    "node-forge": "^1.3.1",
+    "prismjs": "^1.29.0",
+    "qrcode.react": "^3.1.0",
+    "rc-slider": "^10.4.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
+    "react-confetti": "^6.1.0",
+    "react-content-loader": "^6.2.1",
+    "react-datepicker": "^4.21.0",
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-error-boundary": "^4.0.11",
+    "react-grid-layout": "^1.4.4",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-lazyload": "^3.2.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
+    "react-particles": "^2.12.2",
+    "react-query": "^3.39.3",
+    "react-resizable": "^3.0.5",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
+    "react-share": "^4.4.1",
+    "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-tabs": "^6.0.2",
+    "react-toggle": "^4.1.3",
+    "react-tooltip": "^5.21.4",
+    "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0",
+    "react-waypoint": "^10.3.0",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "sentiment": "^5.0.2",
+    "simple-statistics": "^7.8.3",
+    "tone": "^14.7.77",
+    "tsparticles": "^2.12.0",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
+    "use-debounce": "^9.0.4",
+    "use-local-storage-state": "^19.2.0",
+    "use-sound": "^4.0.1",
+    "uuid": "^9.0.1",
+    "web-vitals": "^3.5.0",
+    "web3": "^4.2.0",
+    "workbox-webpack-plugin": "^7.0.0",
+    "workbox-window": "^7.0.0",
+    "yup": "^1.3.3",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^13.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
     "jest": "^29.0.0",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
     "snyk": "^1.1200.0",
     "typescript": "^5.0.0"
   },
