--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
   "devDependencies": {
     "@babel/core": "^7.23.5",
     "@babel/preset-env": "^7.23.5",
+    "bcryptjs": "^3.0.2",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "mongodb-memory-server": "^10.2.1"
   },
   "engines": {
     "node": ">=18.0.0",
