--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,20 +17,21 @@
     "@sentry/node": "^7.80.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "winston": "^3.11.0",
+    "prom-client": "^15.1.3",
     "redis": "^4.6.10",
-    "ioredis": "^5.3.2",
-    "express-validator": "^7.0.1",
-    "compression": "^1.7.4",
     "swagger-ui-express": "^5.0.0",
+    "winston": "^3.11.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
